# CS111_LibraryManager

./: .gitignore  README.md  books.csv  books_with_missing_values.csv  library_manager.py  notes.py  notes.txt  pyproject.toml  scratch.py  students.py
library_functions/: author.py  book.py  book_file_reader.py  library_operations.py
static/: library.css
templates/: index.html
tests/: library.html  library_test.py  library_tests.py
