[project]
name = "cs111-librarymanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assertpy>=1.1",
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "ruff>=0.9.2",
    "uvicorn>=0.34.0",
]

[tool.uv]
dependeny-groups.dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
